--- a/style.css
+++ b/style.css
@@ -352,7 +352,7 @@ body{
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
-	max-width: 1100px;
+	max-width: 100%;
 }
 .row section.col{
 	display: flex;
